[package]
name = "gate-lang"
version = "0.1.0"
edition = "2021"
authors = ["Paski <paski@paski.dev>"]
description = "Gate — a domain-specific language for version control workflows"
license = "Apache-2.0"
repository = "https://gitlab.com/paskidev/gate"

[lib]
name = "gate"
path = "src/lib.rs"

[[bin]]
name = "gate"
path = "src/main.rs"

[dependencies]
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
