[package]
name = "gate-lang"
version = "0.1.1"
edition = "2021"
authors = ["Paski <paski@paski.dev>"]
description = "Gate — a domain-specific language for version control workflows"
license = "Apache-2.0"
repository = "https://gitlab.com/paskidev/gate"
homepage = "https://gitorii.com"
documentation = "https://gitlab.com/paskidev/gate/-/blob/main/README.md"
keywords = ["gate", "dsl", "workflow", "vcs", "automation"]
categories = ["command-line-utilities", "development-tools"]
publish = true

[lib]
name = "gate"
path = "src/lib.rs"

[[bin]]
name = "gate"
path = "src/main.rs"

[dependencies]
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
